<!--
  ~
  ~ Copyright (c) Microsoft Corporation. All rights reserved.
  ~ Licensed under the MIT License.
  ~
  -->

<resources>
    <string name="app_name">Dual Screen Experience Example</string>

    <!-- Launcher -->

    <string name="launch_description">A mock application experience that showcases the benefits of various design patterns for foldable devices in a mobile, on-the-go scenario. Developers and designers can use this app as a conversation starter for their own explorations.</string>
    <string name="launch_button">Launch</string>
    <string name="tutorial_launch_text">Drag the app across the hinge to span the app</string>

    <string name="launch_accessibility_patterns">Dual-screen design patterns</string>

    <!-- Main -->

    <string name="nav_stores_title">Navigation Stores</string>
    <string name="nav_catalog_title">Navigation Catalog</string>
    <string name="nav_products_title">Navigation Products</string>
    <string name="nav_order_title">Navigation Order</string>
    <string name="nav_history_title">Navigation History</string>

    <string name="toolbar_stores_title">Stores</string>
    <string name="toolbar_catalog_title">New Guitars</string>
    <string name="toolbar_products_title">Product Details and Customization</string>
    <string name="toolbar_orders_title">Orders</string>
    <string name="toolbar_orders_receipt_title">Order Receipt</string>
    <string name="toolbar_history_title">Order History</string>
    <string name="toolbar_history_details_title">Order Details</string>

    <string name="toolbar_dev_mode">Dev Mode</string>
    <string name="toolbar_dev_mode_design_pattern">Dev Mode - %s</string>
    <string name="toolbar_user_mode">User Mode</string>
    <string name="toolbar_about">About</string>

    <!-- Stores -->

    <plurals name="review_count">
        <item quantity="one">1 Review</item>
        <item quantity="other">%d Reviews</item>
    </plurals>

    <string name="store_title">%s Guitar Store</string>
    <string name="item_store_button_text">View</string>
    <string name="store_list_empty_message">There are no stores in the area you are looking at. Please go back to your current location.</string>

    <string name="store_details_about_tab">About</string>
    <string name="store_details_contact_tab">Contact</string>
    <string name="store_details_title">Guitar Store</string>
    <string name="address_label">Address:</string>
    <string name="contact_info_label">Owner Contact Info:</string>
    <string name="store_map_recenter">Re-center map</string>
    <string name="store_map_circle_touch_tutorial">Visit these stores today</string>

    <string name="store_accessibility_details_about">About Store</string>

    <!-- Products -->

    <string name="product_details_pickup_title">Custom Alnico III</string>
    <string name="product_details_pickup_description">Pickups</string>

    <string name="product_details_frets_title">%1$d Frets</string>
    <string name="product_details_frets_description">Medium-Jumbo</string>

    <string name="product_details_type_title">Electric Guitar</string>
    <string name="product_details_type_description">Expect %1$s Guitar to be delivered in the </string>
    <string name="product_details_type_description_bold">next %1$d business days.</string>

    <string name="product_details_customize_button">Customize</string>

    <string name="product_customize_color_title">Color</string>
    <string name="product_customize_body_title">Body</string>

    <string name="product_rock_dark_red_normal">Guitar of type dark red rock normal</string>
    <string name="product_rock_gray_normal">Guitar of type gray rock normal</string>
    <string name="product_classic_blue_normal">Guitar of type blue classic normal</string>
    <string name="product_classic_yellow_normal">Guitar of type yellow classic normal</string>
    <string name="product_classic_white_normal">Guitar of type white classic normal</string>
    <string name="product_classic_orange_normal">Guitar of type orange classic normal</string>
    <string name="product_classic_aqua_normal">Guitar of type aqua classic normal</string>
    <string name="product_electric_light_gray_normal">Guitar of type light gray electric normal</string>
    <string name="product_electric_mustard_normal">Guitar of type mustard electric normal</string>
    <string name="product_electric_white_normal">Guitar of type white electric normal</string>
    <string name="product_hardrock_red_normal">Guitar of type red hardrock normal</string>

    <string name="product_accessibility_add_to_order">Add to Order</string>

    <!-- Catalog -->

    <string name="catalog_page_no">Page %1$d of %2$d</string>
    <string name="catalog_toc_item_content_description">on page</string>

    <!-- Orders -->

    <string name="order_empty_message">There are no guitars in your cart. Please head to Products and select the items to view them in your cart.</string>
    <string name="order_recommendations_title">Recommendations</string>
    <string name="order_recommendations_button">Add</string>

    <string name="order_total_title">Total %d items</string>
    <string name="order_submit">Sign &amp; Confirm</string>
    <string name="order_date">Order Date: %s</string>
    <string name="order_id">Order ID: %s</string>
    <string name="order_amount">Amount: %s</string>

    <string name="order_quantity">Qty %s</string>
    <string name="order_quantity_plus">+</string>
    <string name="order_quantity_minus">-</string>

    <string name="order_success_message">Your order has been placed successfully!</string>

    <string name="order_sign_cancel">Cancel</string>
    <string name="order_sign_confirm">Confirm</string>
    <string name="order_sign_error">Please sign before clicking Confirm</string>

    <string name="order_accessibility_quantity_plus">Increase quantity</string>
    <string name="order_accessibility_quantity_minus">Decrease quantity</string>
    <string name="order_accessibility_remove">Remove</string>
    <string name="order_accessibility_reset">Reset</string>

    <string name="order_accessibility_ink_view">Sign &amp; Confirm order</string>

    <string name="order_accessibility_ink_color_red">Ink color red</string>
    <string name="order_accessibility_ink_color_orange">Ink color orange</string>
    <string name="order_accessibility_ink_color_blue">Ink color blue</string>

    <string name="order_accessibility_ink_stroke">Current stroke width: %s</string>

    <string name="order_ink_stroke_small">Small</string>
    <string name="order_ink_stroke_medium">Medium</string>
    <string name="order_ink_stroke_large">Large</string>

    <!-- Order History Mode -->

    <string name="order_history_empty_message">There are no order items in your order history. Please head to cart to make new orders.</string>
    <string name="order_history_view">View</string>
    <string name="tutorial_history_text">Check out your first order in the history page</string>

    <!-- Developer Mode -->

    <string name="tutorial_developer_mode_text">Learn more about the design patterns and code</string>
    <string name="dev_mode_sdk_components">Surface Duo SDK used in this screen</string>
    <string name="dev_mode_code">Code used to achieve this screen</string>
    <string name="dev_mode_design_pattern">Design Pattern used on this screen</string>
    <string name="dev_mode_title">Developer Mode</string>

    <string name="dev_mode_extended_canvas">Extended Canvas</string>
    <string name="dev_mode_list_detail">List Detail</string>
    <string name="dev_mode_dual_view">Dual View</string>
    <string name="dev_mode_two_page">Two Page</string>
    <string name="dev_mode_companion_pane">Companion Pane</string>

    <!-- About -->

    <string name="about_team_title">About us</string>
    <string name="about_team_description">An Android application that showcases all the dual screen design patterns, SDKs and code snippets. Created by the Microsoft Foldables Developer Experience Team.</string>
    <string name="about_feedback_title">Feedback</string>
    <string name="about_feedback_description">Have Feedback? We’d love to hear it, but please don’t share sensitive information. Please reach out to the developer experience team at Microsoft Surface Duo for any feedback using the Github issue reporting.</string>
    <string name="about_feedback_description_clickable">Github issue</string>
    <string name="about_resources_title">Resources &amp; links</string>
    <string name="about_licenses_title">Third Party Notices</string>
    <string name="about_licenses_privacy_title">Microsoft Privacy Statement</string>
    <string name="about_licenses_terms_title">Software Licenses</string>
    <string name="about_licenses_terms_other_title">Other Notices</string>

    <string name="about_accessibility_docs">Microsoft Docs</string>
    <string name="about_accessibility_github">Github</string>
    <string name="about_accessibility_blog">Microsoft Blog</string>
    <string name="about_accessibility_twitch">Twitch</string>
    <string name="about_accessibility_figma">Figma</string>
    <string name="about_accessibility_learn">Microsoft Learn</string>
    <string name="about_accessibility_twitter">Twitter</string>
    <string name="about_accessibility_youtube">Youtube</string>

    <!-- No Internet Connection -->

    <string name="no_internet_connection_title">No Internet Connection</string>
    <string name="no_internet_connection_description">Try checking the network cables, modem, router or try re-connecting to WiFi and restarting the app.</string>
    <string name="no_google_services_title">Google Services unavailable</string>
    <string name="no_google_services_description">It seems like this application requires Google Services to visualize Maps and it isn’t supported on this device or emulator. Try using a different one to test all features.</string>
    <string name="timeout_internet_connection_title">Slow Internet Connection</string>

    <!-- Accessibility -->

    <string name="catalog_action_label">go to page</string>
    <string name="open_action_label">open</string>
    <string name="select_action_label">select</string>
    <string name="change_action_label">change</string>
    <string name="explore_details_action_label">explore details</string>

    <string name="rating_with_label">Rating: %s</string>
    <string name="name_with_label">Name: %s</string>
    <string name="price_with_label">Price: %s</string>
    <string name="address_with_label">Address: %s</string>
    <string name="phone_with_label">Phone Number: %s</string>
    <string name="email_with_label">Email: %s</string>
    <string name="quantity_with_label">Quantity: %s</string>

</resources>