<?xml version="1.0" encoding="utf-8"?><!--
  ~
  ~ Copyright (c) Microsoft Corporation. All rights reserved.
  ~ Licensed under the MIT License.
  ~
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingStart="@dimen/large_padding"
    android:paddingEnd="@dimen/large_padding">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/about_title"
        style="@style/Store.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_team_title"
        app:layout_constraintBottom_toTopOf="@id/about_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/about_description"
        style="@style/Store.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingMultiplier="1.6"
        android:text="@string/about_team_description"
        android:textSize="@dimen/text_size_12"
        app:layout_constraintBottom_toTopOf="@id/about_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_title" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/about_guideline"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/feedback_title"
        style="@style/Store.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_feedback_title"
        android:textSize="@dimen/text_size_18"
        app:layout_constraintBottom_toTopOf="@id/feedback_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_guideline"
        app:layout_constraintVertical_chainStyle="packed"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/feedback_description"
        style="@style/Store.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin"
        android:lineSpacingMultiplier="1.6"
        android:text="@string/about_feedback_description"
        android:textSize="@dimen/text_size_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/feedback_title" />

</androidx.constraintlayout.widget.ConstraintLayout>