<?xml version="1.0" encoding="utf-8"?>
<!--
  ~
  ~ Copyright (c) Microsoft Corporation. All rights reserved.
  ~ Licensed under the MIT License.
  ~
  -->
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="isDesignPatternPresent"
            type="Boolean" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/colorBackgroundFloating">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/dev_mode_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fadeScrollbars="true"
            android:scrollbarThumbVertical="@color/primary_gold"
            android:scrollbars="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:padding="@dimen/large_padding">

                <TextView
                    android:id="@+id/dev_control_title"
                    style="@style/Store.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/normal_margin"
                    android:text="@string/dev_mode_title"
                    app:layout_constraintBottom_toTopOf="@id/dev_control_design_patterns"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <Button
                    android:id="@+id/dev_control_design_patterns"
                    style="@style/DevMode.Button"
                    visibleIf="@{isDesignPatternPresent}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/normal_margin"
                    android:text="@string/dev_mode_design_pattern"
                    app:clickActionLabel="@{@string/open_action_label}"
                    app:layout_constraintBottom_toTopOf="@id/dev_control_code"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/dev_control_title"
                    app:layout_constraintVertical_chainStyle="spread_inside"/>

                <Button
                    android:id="@+id/dev_control_code"
                    style="@style/DevMode.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/normal_margin"
                    android:text="@string/dev_mode_code"
                    app:clickActionLabel="@{@string/open_action_label}"
                    app:layout_constraintBottom_toTopOf="@id/dev_control_sdk"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/dev_control_design_patterns"/>

                <Button
                    android:id="@+id/dev_control_sdk"
                    style="@style/DevMode.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dev_mode_sdk_components"
                    app:clickActionLabel="@{@string/open_action_label}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/dev_control_code"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </FrameLayout>
</layout>
