<?xml version="1.0" encoding="utf-8"?>
<!--
  ~
  ~ Copyright (c) Microsoft Corporation. All rights reserved.
  ~ Licensed under the MIT License.
  ~
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.product.details.ProductDetailsFragment">

    <data>
        <import type="android.widget.LinearLayout" />

        <variable
            name="viewModel"
            type="com.microsoft.device.display.sampleheroapp.presentation.product.ProductViewModel" />

        <variable
            name="rotationViewModel"
            type="com.microsoft.device.display.sampleheroapp.presentation.util.RotationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        android:focusable="true"
        android:clickable="true">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/product_details_image"
            android:layout_width="@dimen/product_image_width"
            android:layout_height="@dimen/product_image_height"
            android:layout_marginEnd="@dimen/large_margin"
            app:layout_constraintBottom_toTopOf="@id/product_details_customize_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/product_details_type_description"
            app:layout_constraintTop_toTopOf="parent"
            app:productImage="@{viewModel.selectedProduct}"
            app:visibleIf="@{!rotationViewModel.isRotated(rotationViewModel.currentRotation)}"
            tools:src="@drawable/orange_classic_guitar"
            tools:visibility="visible"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/product_details_name"
            style="@style/Store.Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_margin"
            android:text="@{viewModel.selectedProduct.name}"
            android:textSize="@dimen/text_size_24"
            app:layout_constraintBottom_toTopOf="@id/product_details_rating"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="EG - 29387 Wood"/>

        <com.microsoft.device.display.sampleheroapp.presentation.product.util.StarRatingView
            android:id="@+id/product_details_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_margin"
            android:layout_marginBottom="@dimen/large_margin"
            app:layout_constraintBottom_toTopOf="@id/product_details_info_containers"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_details_name"
            app:ratingValue="@{viewModel.selectedProduct.rating}"
            tools:ratingValue="3.5"/>

        <LinearLayout
            android:id="@+id/product_details_info_containers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_margin"
            android:orientation="@{rotationViewModel.isRotated(rotationViewModel.currentRotation) ? LinearLayout.HORIZONTAL : LinearLayout.VERTICAL}"
            app:layout_constraintBottom_toTopOf="@id/product_details_type_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_details_rating"
            tools:orientation="vertical">

            <include android:id="@+id/product_details_pickup"
                layout="@layout/product_rounded_container"
                android:layout_width="@dimen/info_container_size"
                android:layout_height="@dimen/info_container_size"
                app:layout_constraintBottom_toTopOf="@id/product_details_frets"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/product_details_rating" />

            <View
                android:layout_width="@dimen/normal_margin"
                android:layout_height="@dimen/normal_margin" />

            <include android:id="@+id/product_details_frets"
                layout="@layout/product_rounded_container"
                android:layout_width="@dimen/info_container_size"
                android:layout_height="@dimen/info_container_size"
                app:layout_constraintBottom_toTopOf="@id/product_details_type_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/product_details_pickup"/>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/product_details_type_title"
            style="@style/Store.Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_margin"
            android:layout_marginTop="@dimen/large_margin"
            android:layout_marginBottom="@dimen/small_margin"
            android:text="@string/product_details_type_title"
            android:textSize="@dimen/text_size_24"
            app:layout_constraintBottom_toTopOf="@id/product_details_type_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_details_info_containers"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/product_details_type_description"
            style="@style/GoldText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_marginBottom="@dimen/normal_margin"
            android:text="@{@string/product_details_type_description(viewModel.selectedProduct.name)}"
            android:textSize="@dimen/text_size_14"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/product_details_customize_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_details_type_title"
            tools:text="@string/product_details_type_description"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/product_details_customize_button"
            style="@style/Customize.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/normal_margin"
            android:layout_marginBottom="@dimen/small_margin"
            android:text="@string/product_details_customize_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/product_details_image"
            app:layout_constraintStart_toStartOf="@id/product_details_image"
            app:layout_constraintTop_toTopOf="@id/product_details_type_title"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>